Fixes accessibility of selects in toolbar (superfluous label visible to screenreaders)

--- a/src/tables.toolbar.css
+++ b/src/tables.toolbar.css
@@ -11,69 +11,54 @@
 	--button-selected-background: #29abe2;
 	--button-checkbox-selected-background: #34a3de;
 	--button-selected-shadow: rgba(0,75,115,.45);
-	--button-interaction-text: #208de3;
 	--button-interaction-shadow: #4faeef;
 }
 
-.tablesaw-enhanced .tablesaw-bar .btn {
+.tablesaw-bar .btn {
 	border: 1px solid #ccc;
+	border-radius: .25em;
 	background: none;
-	background-color: #fafafa;
 	box-shadow: 0 1px 0 rgba(255,255,255,1);
 	color: #4a4a4a;
-	clear: both;
 	cursor: pointer;
-	display: block;
-	font: bold 20px/1 sans-serif;
+	display: inline-block;
 	margin: 0;
 	padding: .5em .85em .4em .85em;
 	position: relative;
 	text-align: center;
 	text-decoration: none;
 	text-transform: capitalize;
-	text-shadow: 0 1px 0 #fff;
-	width: 100%;
 
-	/* Theming */
-	background-image: linear-gradient( to bottom, rgba( 255,255,255,.1 ) 0%, rgba( 255,255,255,.1 ) 50%, rgba( 170,170,170,.1 ) 55%, rgba( 120,120,120,.15 ) 100% );
-
-	-webkit-appearance: none !important;
-	-moz-appearance: none !important;
-
-	box-sizing: border-box;
-
-	-webkit-font-smoothing: antialiased;
-
-	border-radius: .25em;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
-.tablesaw-enhanced .tablesaw-bar a.btn {
+.tablesaw-bar a.btn {
 	color: var(--button-text);
 }
-.tablesaw-enhanced .tablesaw-bar .btn:hover {
+.tablesaw-bar .btn:hover {
 	text-decoration: none;
 }
 
 /* Default radio/checkbox styling horizonal controlgroups. */
-.tablesaw-enhanced .tablesaw-bar .btn:active {
+.tablesaw-bar .btn:active {
 	background-color: #ddd;
-	background-image: linear-gradient( to bottom, rgba( 100,100,100,.35 ) 0%, rgba( 255,255,255,0 ) 70% );
 }
-.tablesaw-enhanced .tablesaw-bar .btn:hover,
-.tablesaw-enhanced .tablesaw-bar .btn:focus {
-	color: var(--button-interaction-text);
-	background-color: #fff;
-	outline: none;
-}
-.tablesaw-bar .btn:focus {
-	box-shadow: 0 0 .35em var(--button-interaction-shadow) !important;
+@supports ( box-shadow: none ) {
+	.tablesaw-bar .btn:focus {
+		background-color: #fff;
+		outline: none;
+	}
+	.tablesaw-bar .btn:focus {
+		box-shadow: 0 0 .35em var(--button-interaction-shadow) !important;
+	}
 }
 
 .tablesaw-bar .btn-select select {
 	background: none;
 	border: none;
-	display: block;
+	display:inline-block;
 	position: absolute;
-	font-weight: inherit;
 	left: 0;
 	top: 0;
 	margin: 0;
@@ -81,10 +66,7 @@
 	height: 100%;
 	z-index: 2;
 	min-height: 1em;
-}
-.tablesaw-bar .btn-select select {
 	opacity: 0;
-	display:inline-block;
 	color: transparent;
 }
 .tablesaw-bar .btn select option {
@@ -92,15 +74,7 @@
 	color: #000;
 	font-family: sans-serif;
 }
-.tablesaw-enhanced .tablesaw-bar .btn.btn-select {
-	color:#4d4d4d;
-	padding-right: 2.5em;
-	min-width: 7.25em;
-	text-align: left;
-	text-indent: 0;
-}
-.tablesaw-bar .btn.btn-small,
-.tablesaw-bar .btn.btn-micro {
+.tablesaw-bar .btn {
 	display: inline-block;
 	width: auto;
 	height: auto;
@@ -118,24 +92,19 @@
 	padding: .4em .7em .25em .7em;
 }
 
-.tablesaw-enhanced .tablesaw-bar .btn-select {
+.tablesaw-bar .btn-select {
+	padding-right: 1.5em;
+	text-align: left;
+	display: inline-block;
+	color:#4d4d4d;
+	padding-right: 2.5em;
+	min-width: 7.25em;
 	text-align: left;
 }
+
 .tablesaw-bar .btn-select:after {
-	background: #e5e5e5;
-	background: rgba(0,0,0,.1);
-	box-shadow: 0 2px 2px rgba(255,255,255,.25);
 	content: " ";
-	display: block;
 	position: absolute;
-}
-
-.tablesaw-bar .btn-select.btn-small,
-.tablesaw-bar .btn-select.btn-micro {
-	padding-right: 1.5em;
-}
-
-.tablesaw-bar .btn-select:after {
 	background: none;
 	background-repeat: no-repeat;
 	background-position: .25em .45em;
@@ -233,10 +202,10 @@
 	font-family: sans-serif;
 }
 .tablesaw-toolbar {
-	font-size: .875em;
 	float: left;
 }
 .tablesaw-toolbar label {
+	font-size: .875em;
 	padding: .5em 0;
 	clear: both;
 	display: block;
